--- a/public_html/index.html
+++ b/public_html/index.html
@@ -80,7 +80,7 @@ and open the template in the editor.
             <div class="chapter"><p class="chapter-name"> Contact</p>
             
                 I prefer the classic e-mail method: <a href="mailto:panzerfausten@gmail.com">panzerfausten@gmail.com</a>.<br>
-                But if you really want to contact me by other ways you can go to my facebook page <a href="mailto:https://www.facebook.com/darien.miranda/">https://www.facebook.com/darien.miranda/</a>.<br>
+                But if you really want to contact me by other ways you can go to my facebook page <a href="https://www.facebook.com/darien.miranda/">https://www.facebook.com/darien.miranda/</a>.<br>
                 And that's pretty much it.
                 <br/>
                 
