--- a/public_html/testPhotoJS.html
+++ b/public_html/testPhotoJS.html
@@ -22,15 +22,15 @@ and open the template in the editor.
     <body>
         <header id="upbar">
             
-            <span><a id="panzer" href="#panzer">Panzer</a></span>
+            <span><a id="panzer" href="#panzer">Panzer    &nbsp;&nbsp;&nbsp;</a></span>
             <span><a href="#work">Work</a></span>
             <span><a href="#places">Places</a></span>
             <span><a href="#media">Media</a></span>
             <span><a href="#contact">Contact</a></span>
         </header>
-       
+<a name="panzer"></a>
+
         <div class="book">
-            <a name="panzer"></a>
             <div class="chapter" >
                 <p class="chapter-name">Panzer</p>
                 <p> Hey, i am Darien Miranda, (or panzer).
