--- a/public_html/testPhotoJS.html
+++ b/public_html/testPhotoJS.html
@@ -12,6 +12,7 @@ and open the template in the editor.
       href="img/favicon.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link  rel="stylesheet" href="css/style.css" type="text/css"/>
         <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/photoJS.css">
